# time_series_news

./: .gitignore  MLproject  Makefile  README.md  pyproject.toml  python_env.yaml
Extractrions/: requirements.txt
Extractrions/News/: main.py
Extractrions/TRM/: main.py
