[project]
name = "colombia-data-pipeline"
version = "0.1.0"
description = "Pipeline para extraer datos TRM y noticias de Colombia"
authors = [
    {name = "Carlos Daniel", email = "carlos@example.com"}
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0", 
    "pandas>=2.0.0",
    "lxml>=4.9.0",
    "sqlalchemy>=2.0.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
